_kube/db/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: shortener-app
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
     targetPort: 5432
  selector:
   app: postgres
