_kube/db/postgres-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shortener-db-network
  namespace: shortener-app
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: url-api
        - podSelector:
            matchLabels:
              app: user-api
      ports:
      - port: 5432
